# game

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml  intro.md
.githooks/: pre-commit  pre-push
.github/workflows/: build.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  game.py
backend/tests/: conftest.py  test_auth.py  test_game.py
docs/: architecture.md  gameplay.md  press-release.md  setup.md
godot/: .gdlintrc  .gutconfig.json  icon.svg.import  project.godot
godot/assets/isometric/: buildings_tileset.png.import  ground_tileset.png.import
godot/assets/isometric/roads/: preview.jpg.import  (+1 more)
godot/scenes/buildings/: Building.tscn
godot/scenes/platformer/: PlatformerLevel.tscn
godot/scenes/ui/: MainMenu.tscn
godot/scenes/village/: Player.tscn  Village.tscn
godot/scripts/autoload/: game_manager.gd  game_manager.gd.uid  network_manager.gd  network_manager.gd.uid  scene_manager.gd  scene_manager.gd.uid
godot/scripts/platformer/: platformer_level.gd  platformer_level.gd.uid  platformer_player.gd  platformer_player.gd.uid
godot/scripts/player/: player.gd  player.gd.uid
godot/scripts/ui/: main_menu.gd  main_menu.gd.uid
godot/scripts/village/: building.gd  building.gd.uid  village.gd  village.gd.uid  village_generator.gd  village_generator.gd.uid
godot/tests/: test_game_manager.gd  test_game_manager.gd.uid
journal/: 260418-project-kickoff.md  260418-tileset-and-village-generator.md  260419-vienna-village-scene.md
nginx/: nginx.conf
(+689 files in other folders)
